hphp/hack/test/typecheck/destructure/nested_readonly_bad.php.exp
ERROR: File "nested_readonly_bad.php", line 13, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
ERROR: File "nested_readonly_bad.php", line 21, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
ERROR: File "nested_readonly_bad.php", line 22, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
